--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
         find . -type f -name './dev/files/*.c' -exec sh -c 'x="{}"; mv "$x" "${x}_"' \;
         ls -al ./dev/files/
     - name: push changes
+      run: |
         sudo git config --local user.email "${GITHUB_ACTOR}@gmail.com"
         sudo git config --local user.name "${GITHUB_ACTOR}"
         sudo git remote -v
