--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   issues:
     types: labeled
   schedule:
-    - cron: 0 */8 * * *
+    - cron: 0 0 * * *
 jobs:
  StartWorks:
     runs-on: ubuntu-latest
