--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       run: echo "::set-output name=matrix::$(ls $PWD/dev/files/*.c|jq -cnR '[inputs | select(length>0)]')"
 
  ManyWorks:
-    if: ${{ needs.StartWorks.outputs.matrix != []}}
+    if: ${{ needs.StartWorks.outputs.matrix[0] }}
     runs-on: ubuntu-latest
     needs: StartWorks
     strategy:
